kustomize/components/ingress/ingress-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /pgadmin/$2
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-path: /pgadmin
spec:
  ingressClassName: nginx
  rules:
    - host: 152.42.156.69.nip.io
      http:
        paths:
          - path: /pgadmin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pgadmin-svc
                port:
                  number: 80
